# CPP_Exercises

./: .gitignore
tp01/: CMakeLists.txt
tp01/cours/: 2-parrot.cpp  hello-world  parrot
tp01/cours/5-build-errors/: 2-class.cpp  3-hello.cpp  4-car.hpp  4-driver.hpp  4-main.cpp  5-tac.hpp  5-tic.hpp
tp01/cours/5-link-errors/: prog  program
tp01/ex1/: main.cpp
tp01/ex2/: main.cpp
tp01/ex3/: main.cpp  reponses.md  utils.hpp
tp02/: CMakeLists.txt  Card.cpp  Card.hpp  Color.cpp  Color.hpp  Player.cpp  Player.hpp  TP2.md  Value.cpp  Value.hpp  main.cpp
tp02/cours/: 2-first-class.cpp  3-constructor.cpp  4-destructor.cpp
tp02/cours/5-modules/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp  main.cpp
tp02/cours/6-operators/: CMakeLists.txt  Polygon.cpp  Polygon.hpp  main.cpp
tp03/3-hrsoft/: HRSoftTests.cpp
tp03/3-hrsoft/HRSoft/: Department.hpp  Employee.hpp  HRSoftSystem.hpp
tp04/ex1/src/: qcm.hpp
tp04/ex2/tests/: 25-equality.cpp
tp04/ex3/src/: 01-types.hpp
tp05/ex2/: Card.cpp  Player.cpp  Player.hpp  Tracker.hpp  main.cpp
tp05/ex3/: Link.cpp  Link.hpp  LinkedList.cpp  LinkedList.hpp  main.cpp
tp06/1-recipes/: Material.hpp  ProgramData.cpp  ProgramData.hpp  Recipe.hpp  aliases.hpp
tp07/dungeon/: Character.hpp  Dungeon.cpp  Entity.hpp  Item.hpp  Potion.hpp  Trap.hpp
tp08/ex1/src/: qcm.hpp
tp08/ex2/src/: alias.hpp  (+1 more)
tp09/: Point2d.hpp  Point2dEqual.hpp  Point2dHash.hpp  Point3d.hpp  Point3dCompare.hpp  ex1.md  ex2.md  main.cpp
tp10/src/: blend.cpp  gray.cpp  image.hpp  mandelbrot.cpp  pixels.hpp
tp11/src/: factory.cpp  tostring.cpp
(+4 files in other folders)
